--- a/Problema/Parte1/index.html
+++ b/Problema/Parte1/index.html
@@ -11,6 +11,6 @@
         coders aprenden HTML5, CSS3,Javascript y el uso de
         manejadores de contenido,termimando preparadas para crear infinitod productos y soluciones web.</p>
         </div>
-            <a href="index.html"></a>
+            <a href="../Parte2/index.html">>Siguiente</a>
     </body>
 </html>
