--- a/Problema/Parte2/index.html
+++ b/Problema/Parte2/index.html
@@ -37,7 +37,7 @@
         manejadores de contenido,termimando preparadas para crear infinitod productos y soluciones web.</p>
         
         </div>
-        <a href=""></a>
+        <a href="../Parte3/index.html">>SIGUIENTE</a>
         
     </body>
 </html>
