--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Problema/Parte1/index.html">Parte 1</a>
-    <a href="Problema/Parte2/index.html">Parte 2</a>
-    <a href="Problema/Parte3/index.html">Parte 3</a>
-    <a href="Problema/Parte4/index.html">Parte 4</a>
+   <h3><center>INDICE</center></h3>
+   
+   <p><center>Sigue las flechas</center></p>
+   <ul>
+   <li>
+    <a href="Problema/Parte1/index.html">>Parte 1</a>
+    <li>
+      <a href="Problema/Parte2/index.html">>Parte 2</a>  
+    </li>
+    <li>
+    <a href="Problema/Parte3/index.html">>Parte 3</a>
+       </li>
+       <li>
+    <a href="Problema/Parte4/index.html">>Parte 4</a>
+    </li>
+    </ul>
+    
+
 </body>
 </html>
